# bloom

./: Cargo.toml  bloom_example.blend  bloom_example.blend1  bloom_example.glb  compile-shaders.bat  readme.md
compile-shaders/: Cargo.toml
compile-shaders/src/: main.rs
shaders/: downsample.spv  downsample_initial.spv  downsample_pre_filter.spv  fragment.spv  fullscreen_tri.spv  fullscreen_tri_wgpu.spv  tonemap.spv  upsample.spv  upsample_final.spv  vertex.spv
shaders/rendering/: Cargo.toml
shaders/rendering/src/: lib.rs
src/: main.rs
vulkan-bloom/: Cargo.toml
vulkan-bloom/src/: lib.rs
vulkan-impl/: Cargo.toml
vulkan-impl/src/: main.rs
vulkan-impl/vulkan-bloom/: Cargo.toml
vulkan-impl/vulkan-bloom/src/: lib.rs
vulkan-impl/vulkan-common/: Cargo.toml
vulkan-impl/vulkan-common/src/: lib.rs
