[package]
name = "bloom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
bytemuck = { version = "1.7.2", features = ["derive"] }
colstodian = { git = "https://github.com/termhn/colstodian" }
dolly = "0.1.3"
egui = "0.14.2"
egui-winit-ash-integration = "0.2.0"
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
image = { version = "0.23.14", features = ["png"], default-features = false }
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
ash = "0.33.3"
ash-window = "0.7.0"
gpu-allocator = "0.10.0"
simplelog = "0.10.2"
vulkan-common = { package = "ash-opinionated-abstractions", git = "https://github.com/expenses/ash-opinionated-abstractions" }
winit = "0.25.0"
log = "0.4.14"
vk-sync = { package = "vk-sync-fork", version = "0.2.1" }
rendering-shaders = { path = "shaders/rendering" }
vulkan-bloom = { path = "vulkan-bloom" }

[workspace]
members = [".", "compile-shaders", "shaders/rendering", "vulkan-bloom"]
