[package]
name = "vulkan-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bytemuck = { version = "1.7.2", features = ["derive"] }
colstodian = { git = "https://github.com/termhn/colstodian" }
dolly = "0.1.3"
gltf = { version = "0.16.0", default-features = false, features = ["utils"] }
image = { version = "0.23.14", features = ["png"], default-features = false }
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
rendering-shaders = { path = "../shaders/rendering" }
ash = "0.33.3"
ash-window = "0.7.0"
gpu-allocator = "0.10.0"
simplelog = "0.10.2"
vulkan-common = { package = "ash-opinionated-abstractions", git = "https://github.com/expenses/ash-opinionated-abstractions" }
winit = "0.25.0"
log = "0.4.14"
vk-sync = { git = "https://github.com/expenses/vk-sync-rs" }
egui-winit-ash-integration = { git = "https://github.com/expenses/egui-winit-ash-integration", branch = "combined" }
egui = "0.14.2"
vulkan-bloom = { path = "vulkan-bloom" }
